fix weird text cutoff for title

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -1,23 +1,32 @@
+
 @function white($opacity) {
   @return rgba(0,0,0, $opacity)
 }
 
 @mixin navigation-list {
-  background-color: $THEME_COLOR;
   border-bottom: 1px solid $white_smoke;
-  border-top: 2px solid $HIGHLIGHTS;
-  list-style-type:none;
+  background-color: $THEME_COLOR;
+  color: $HIGHLIGHTS;
+  position: fixed;
+  z-index: 1;
   width: 100%;
   height: 70px;
-  padding:0;
-  margin:0;
-  overflow:hidden;
+  text-align: center;
+  border-radius: 0px;
+  overflow: visible;
+  float: left;
 
-  > li {
-        display:inline;
-        float:left;
-        padding: 6%;
-        text-decoration: none;
+  ul {
+    height: auto;
+    margin: 0px;
+  }
+
+  li {
+    display: block;
+    text-decoration: none;
+    color: $white;
+    font-weight: bold;
+    font-size: 40px;
   }
 }
 
